fix devices menu not showing

--- a/app/pages/patientdata/patientdata.less
+++ b/app/pages/patientdata/patientdata.less
@@ -174,11 +174,16 @@
 // Content
 // ====================================
 
-.patient-data-content {
-  display: block;
+#tidelineMain.basics,
+#tidelineMain.daily,
+#tidelineMain.bgLog,
+#tidelineMain.trends {
+  .patient-data-content {
+    display: block;
 
-  @media screen and (max-width: @mobile-breakpoint) {
-    display: none;
+    @media screen and (max-width: @mobile-breakpoint) {
+      display: none;
+    }
   }
 }
 
